Fix Container size on mobile

--- a/src/styles/scss/_base.scss
+++ b/src/styles/scss/_base.scss
@@ -25,6 +25,7 @@ body {
     margin: 0 auto;
 
     @include tablet {
+      height: 100dvh;
       padding: 20px;
     }
   }
